--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Squadfree Bootstrap Template - Index</title>
+  <title>NCU - new website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,90 +38,90 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top header-transparent">
-    <div class="container d-flex align-items-center justify-content-between position-relative">
+<!-- ======= Header ======= -->
+<header id="header" class="fixed-top header-transparent">
+  <div class="container d-flex align-items-center justify-content-between position-relative">
 
-      <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Squadfree</span></a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      </div>
-
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
-          <li class="dropdown megamenu"><a href="#"><span>Mega Menu</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li>
-                <strong>Column 1</strong>
-                <a href="#">Column 1 link 1</a>
-                <a href="#">Column 1 link 2</a>
-                <a href="#">Column 1 link 3</a>
-              </li>
-              <li>
-                <strong>Column 2</strong>
-                <a href="#">Column 2 link 1</a>
-                <a href="#">Column 2 link 2</a>
-                <a href="#">Column 3 link 3</a>
-              </li>
-              <li>
-                <strong>Column 3</strong>
-                <a href="#">Column 3 link 1</a>
-                <a href="#">Column 3 link 2</a>
-                <a href="#">Column 3 link 3</a>
-              </li>
-              <li>
-                <strong>Column 4</strong>
-                <a href="#">Column 4 link 1</a>
-                <a href="#">Column 4 link 2</a>
-                <a href="#">Column 4 link 3</a>
-              </li>
-              <li>
-                <strong>Column 5</strong>
-                <a href="#">Column 5 link 1</a>
-                <a href="#">Column 5 link 2</a>
-                <a href="#">Column 5 link 3</a>
-              </li>
-            </ul>
-          </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
+    <div class="logo">
+      <h1 class="text-light"><a href="index.html"><span>CodeMaster</span></a></h1>
+      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
     </div>
-  </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container" data-aos="fade-up">
-      <h1>Welcome to NCU</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
-    </div>
-  </section><!-- End Hero -->
+    <nav id="navbar" class="navbar">
+      <ul>
+        <li><a class="nav-link scrollto active" href="#hero">首頁</a></li>
+        <li><a class="nav-link scrollto" href="#about">關於我們</a></li>
+        <li><a class="nav-link scrollto" href="#services">服務</a></li>
+        <li><a class="nav-link scrollto" href="#portfolio">作品集</a></li>
+        <li><a class="nav-link scrollto" href="#team">團隊</a></li>
+        <li class="dropdown"><a href="#"><span>下拉式選單</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a href="#">下拉式選單 1</a></li>
+            <li class="dropdown"><a href="#"><span>深層下拉式選單</span> <i class="bi bi-chevron-right"></i></a>
+              <ul>
+                <li><a href="#">深層下拉式選單 1</a></li>
+                <li><a href="#">深層下拉式選單 2</a></li>
+                <li><a href="#">深層下拉式選單 3</a></li>
+                <li><a href="#">深層下拉式選單 4</a></li>
+                <li><a href="#">深層下拉式選單 5</a></li>
+              </ul>
+            </li>
+            <li><a href="#">下拉式選單 2</a></li>
+            <li><a href="#">下拉式選單 3</a></li>
+            <li><a href="#">下拉式選單 4</a></li>
+          </ul>
+        </li>
+        <li class="dropdown megamenu"><a href="#"><span>超級選單</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li>
+              <strong>第一欄</strong>
+              <a href="#">第一欄連結 1</a>
+              <a href="#">第一欄連結 2</a>
+              <a href="#">第一欄連結 3</a>
+            </li>
+            <li>
+              <strong>第二欄</strong>
+              <a href="#">第二欄連結 1</a>
+              <a href="#">第二欄連結 2</a>
+              <a href="#">第二欄連結 3</a>
+            </li>
+            <li>
+              <strong>第三欄</strong>
+              <a href="#">第三欄連結 1</a>
+              <a href="#">第三欄連結 2</a>
+              <a href="#">第三欄連結 3</a>
+            </li>
+            <li>
+              <strong>第四欄</strong>
+              <a href="#">第四欄連結 1</a>
+              <a href="#">第四欄連結 2</a>
+              <a href="#">第四欄連結 3</a>
+            </li>
+            <li>
+              <strong>第五欄</strong>
+              <a href="#">第五欄連結 1</a>
+              <a href="#">第五欄連結 2</a>
+              <a href="#">第五欄連結 3</a>
+            </li>
+          </ul>
+        </li>
+        <li><a class="nav-link scrollto" href="#contact">聯絡我們</a></li>
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
+
+  </div>
+</header><!-- End Header -->
+
+<!-- ======= Hero Section ======= -->
+<section id="hero">
+  <div class="hero-container" data-aos="fade-up">
+    <h1>Welcome to CodeMaster</h1>
+    <h2>Explore the world of computational thinking and programming.</h2>
+    <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>
+  </div>
+</section><!-- End Hero -->
 
   <main id="main">
 
@@ -552,7 +552,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>320桃園市中壢區中大路300號</p>
             </div>
           </div>
 
@@ -560,7 +560,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>contact@example.com</p>
+              <p>NCU12345@gmail.com</p>
             </div>
           </div>
 
@@ -568,7 +568,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>+1 5589 55488 55</p>
+              <p>034227151</p>
             </div>
           </div>
 
@@ -577,32 +577,11 @@
         <div class="row">
 
           <div class="col-lg-6 ">
-            <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3616.94000466052!2d121.19272387622347!3d24.96815577785918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346823c1ec904dcb%3A0xcdc129d4455ce456!2z5ZyL56uL5Lit5aSu5aSn5a24!5e0!3m2!1szh-TW!2stw!4v1712573713444!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdEO_2IVSpRtjIb4YWQdqtilkEC_Yus-JyquN6Q95QjdzLKkg/viewform?embedded=true" width="640" height="705" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
           </div>
 
         </div>
